--- a/demo/index.html
+++ b/demo/index.html
@@ -11,32 +11,10 @@
   <link rel="stylesheet" href="../L.Control.Boating.css" />
   <script src="../L.Control.Boating.js"></script>
 
-  <style>
-    html, body, .leaflet-container {
-      height: 100%;
-      width: 100%;
-      margin: 0;
-    }
-  </style>
+  <link rel="stylesheet" href="./style.css" />
 </head>
 <body>
   <div id="map"></div>
-  <script>
-
-    const seaMarks = L.tileLayer('https://tiles.openseamap.org/seamark/{z}/{x}/{y}.png')
-
-    const baseMap = L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-      attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
-    })
-
-    const map = L.map('map', {
-      center: [47.2, -2.30],
-      layers: [baseMap, seaMarks],
-      zoom: 10,
-    })
-
-    L.control.boating().addTo(map)
-
-  </script>
+  <script src="./script.js"></script>
 </body>
 </html>
