--- a/demo/index.html
+++ b/demo/index.html
@@ -4,14 +4,16 @@
   <title>Leaflet.Boating</title>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+  <link rel="stylesheet" href="./style.css" />
 
+  <!-- leaflet -->
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 
+  <!-- leaflet boating -->
   <link rel="stylesheet" href="../L.Control.Boating.css" />
   <script src="../L.Control.Boating.js"></script>
 
-  <link rel="stylesheet" href="./style.css" />
 </head>
 <body>
   <div id="map"></div>
